footer to the center fixed

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </div>
         </div>
     </div>
-    <footer class="text-left mt-16 flex w-full p-4">
+    <footer class="text-left mt-16 flex w-full items-center justify-center p-4 ">
         <div class="social-icons mr-4 pt-2 flex-col justify-center align-center pr-6">
             <a href="https://www.instagram.com/nextcomputacion/?hl=es-la">
                 <div class="facebook social-icon"></div>
